<resources>
    <string name="app_name">BonusApp</string>
    <string name="title_placeholder">Title</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="description_placeholder">Description</string>
    <string name="date_and_time_placeholder">Date and Time</string>
    <string name="pick_time_text">Pick time</string>
    <string name="pick_date_text">Pick date</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="delete_reminder_question">Are you sure you want to delete this reminder?</string>
    <string name="delete_reminder_warning">Deleting this reminder means it will be gone forever.</string>
</resources>