<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:hint="@string/title_placeholder"
        />

    <EditText
        android:id="@+id/reminder_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="4dp"
        android:gravity="top"
        android:hint="@string/description_placeholder"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/pick_date"
            android:text="@string/pick_date_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/pick_time"
            android:text="@string/pick_time_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>