<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/reminder_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/title_placeholder"
            android:paddingTop="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/reminder_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_icon"
            />

        <ImageView
            android:id="@+id/delete_icon"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="right"
            android:src="@drawable/ic_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reminder_title"
        android:contentDescription="@string/delete_icon" />

        <TextView
            android:id="@+id/reminder_description"
            tools:text="@string/description_placeholder"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/delete_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/reminder_date_and_time"
            />

        <TextView
            android:id="@+id/reminder_date_and_time"
            app:layout_constraintTop_toBottomOf="@id/delete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/date_and_time_placeholder"
            android:paddingEnd="4dp"
            android:paddingStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
